# qfetch

./: Cargo.toml
src/: colors.rs  config.rs  fetch.rs  hostname.rs  main.rs  ram.rs  user.rs
src/display/: icons.rs  mod.rs
src/sources/: colors.rs  disk.rs  host.rs  mod.rs  os.rs  ram.rs  user.rs
