[package]
name = "qfetch"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
complexity = "deny"
perf = "deny"
or_fun_call = "allow"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.9"
log = "0.4.20"
owo-colors = "3.5.0"
pretty_env_logger = "0.5.0"
sysinfo = "0.29.11"
